--- a/2025204021/backend/package.json
+++ b/2025204021/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jest": "^29.7.0",
     "mongoose": "^8.18.1",
     "nodemon": "^3.1.10",
     "uuid": "^11.1.0"
